Edits from review